structmeta-tests/tests/compile_fail/struct_meta/option_flag.rs
use structmeta::Flag;

#[derive(structmeta::StructMeta)]
struct Example {
    flag: Option<Flag>,
}

fn main() {}
