structmeta-tests/tests/compile_fail/struct_meta/option_flag.stderr
error[E0277]: the trait bound `structmeta::Flag: Parse` is not satisfied
 --> tests/compile_fail/struct_meta/option_flag.rs:5:18
  |
5 |     flag: Option<Flag>,
  |                  ^^^^ the trait `Parse` is not implemented for `structmeta::Flag`
  |
  = help: the following other types implement trait `Parse`:
            Abi
            Abstract
            AndAnd
            AndEq
            AngleBracketedGenericArguments
            Arm
            As
            At
          and $N others
note: required by a bound in `ParseBuffer::<'a>::parse`
 --> $CARGO/syn-2.0.0/src/parse.rs
  |
  |     pub fn parse<T: Parse>(&self) -> Result<T> {
  |                     ^^^^^ required by this bound in `ParseBuffer::<'a>::parse`
